--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "*://*.twitch.tv/"
   ],
   "permissions": [
-    "cookies"
+    "cookies",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html"
