Twitch OAuth2 로그인 플로우까지 추가

--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,12 @@
   "manifest_version": 3,
   "minimum_chrome_version": "92",
   "host_permissions": [
-    "*://*.twitch.tv/"
+    "*://*.twitch.tv/",
+    "http://localhost:8080/*"
   ],
   "permissions": [
+    "identity",
+    "storage",
     "cookies",
     "tabs"
   ],
